[package]
name = "lesson-three"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"             # hashing (SHA-256)
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }     # (de)serialize transaction/block (for canonicalization/testing)
serde_json = "1.0"
ed25519-dalek = { version = "1.0", features = ["std"] } # Ed25519 signing/verifying
rand = "0.8"              # RNG for keypair generation
hex = "0.4"               # encode pubkeys to human-readable hex

